--- a/css-3/css3.css
+++ b/css-3/css3.css
@@ -196,7 +196,8 @@ height: 100px;
 background: linear-gradient(45deg, #EECFBA, #C5DDE8);
 transition-property: width, height;
 transition-duration: .5s;
-border-radius: 555px;
+transition-delay: .5s;
+border-radius: 55px;
 }
 .transition-property:hover {
   background: linear-gradient(45deg, #EE2fB3, #C5DDE8);
