--- a/css-3/css3.css
+++ b/css-3/css3.css
@@ -276,7 +276,7 @@ transition-timing-function: cubic-bezier(0.6, 0.1, 0.15, 0.8);
 
 
 
-* {box-sizing: border-box;}
+/** {box-sizing: border-box;}*/
 body {font-family: 'Playfair Display', serif; margin: 0;}
 h1 {font-weight: normal;color: #6A5953}
 .kbd {font-size: 0.9em;display:inline-block;line-height:1.1;}
@@ -455,11 +455,93 @@ h3{margin:0;text-align:center}
 
 
 
+.body {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+}
+@keyframes loader {
+  0% {transform:rotate(-45deg)}
+  50%{transform:rotate(-135deg)}
+  100%{transform:rotate(-225deg)}}
+@keyframes span-1 {
+  0% {transform:translate(0);}
+  50%{transform:translate(-50px, 0);border-color:#EE4D68}
+  100%{transform:translate(0);}}
+@keyframes span-2 {
+  0%{transform:translate(0);}
+  50%{transform:translate(50px, 0);border-color:#875678}
+  100%{transform:translate(0);}}
+@keyframes span-3 {
+  0%{transform:translate(0);}
+  50%{transform:translate(0, -50px);border-color:#FF9900}
+  100%{transform:translate(0);}}
+@keyframes span-4 {
+  0%{transform:translate(0);}
+  50%{transform:translate(0, 50px);border-color:#00E4F6}
+  100%{transform:translate(0);}}
+.loader {
+  width: 50px;
+  height: 50px;
+  position: relative;
+  animation: loader 2s infinite ease-in-out;
+}
+.loader span {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  border: 4px solid #0B1B48;
+}
+.loader span:nth-child(1) {
+  animation: span-1 2s ease-in-out infinite;
+}
+.loader span:nth-child(2) {
+  animation: span-2 2s ease-in-out infinite;
+}
+.loader span:nth-child(3) {
+  animation: span-3 2s ease-in-out infinite;
+}
+.loader span:nth-child(4) {
+  animation: span-4 2s ease-in-out infinite;
+}
 
 
 
-
-
+.back-ground {
+  margin: 0;
+  background: #E6E2D6;
+  text-align: center;
+}
+.loader-container {
+/*  position: absolute;
+  top: calc(50% - 65px);
+  left: calc(50% - 65px);*/
+  margin: 0 auto;
+  width: 100px;
+  height: 100px;
+  background: #BDE2E0;
+  border-radius: 50%;
+  border: 15px solid #D7695A;
+  box-shadow: inset 0 0 15px rgba(0,0,0,.5);
+  color: white;
+  text-align: center;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 100px;
+  overflow: hidden;
+}
+@keyframes load {
+  100% {
+    transform: translateY(-1100px);
+  }
+}
+.loader1 {
+  animation: load 5s steps(11, end) infinite;
+}
 
 
 
