css3 animation-direction

--- a/css-3/css3.css
+++ b/css-3/css3.css
@@ -556,6 +556,8 @@ h3{margin:0;text-align:center}
     overflow: hidden;
     -webkit-animation: type 5s steps(50, end);
     animation: type 9s steps(55, end);
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
 @keyframes type{
     from { width: 0; }
@@ -565,7 +567,59 @@ h3{margin:0;text-align:center}
     from { width: 0; }
 }
 
-
+body {
+  background: url(https://html5book.ru/wp-content/uploads/2015/05/background1.png);
+}
+.container5 {
+ margin: 0;
+  text-align: center;  
+  width: 660px;
+  margin: 50px auto;
+}
+ul {
+  padding: 0;
+  list-style: none;
+  margin-bottom: 40px;
+}
+li {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-right: 10px; 
+  box-shadow: 1px 1px 2px rgba(0,0,0,.3);
+}
+li:nth-child(1) {background:#8A6C5E}
+li:nth-child(2) {background:#BBDADE}
+li:nth-child(3) {background:#F6D5A1}
+li:nth-child(4) {background:#FAC0B0}
+li:nth-child(5) {background:#FF615B}
+.alternate li {
+  -webkit-animation: shake .7s linear alternate infinite;
+  animation: shake .7s linear alternate infinite;
+}
+.alternate-reverse li {
+  -webkit-animation: shake 0.7s linear alternate-reverse infinite;
+  animation: shake 0.7s linear alternate-reverse infinite;
+}
+.normal li {
+  -webkit-animation: shake 0.7s linear normal infinite;
+  animation: shake 0.7s linear normal infinite;
+}
+.reverse li {
+  -webkit-animation: shake 0.7s linear reverse infinite;
+  animation: shake 0.7s linear reverse infinite;
+}
+@-webkit-keyframes shake {
+  100% {
+    -webkit-transform: translateX(-30px);    
+  }
+}
+@keyframes shake {
+  100% {
+    transform: translateX(-30px);    
+  }
+}
 
 
 
