--- a/css-3/css3.css
+++ b/css-3/css3.css
@@ -364,6 +364,7 @@ h1 {font-weight: normal;color: #6A5953}
   -webkit-transform: skewX(20deg);
   transform: skewX(20deg);
 }
+
 .nine:hover {
   -o-transform: skewY(-20deg);
   -ms-transform: skewY(-20deg);
@@ -631,9 +632,26 @@ li {
   }
 }
 
+.test-section {
+  column-count: 3;
+  column-width: 100px;
+  font-family: 'Marck Script', cursive;
+  column-gap: 55px;
+  background-color: #FAC0B0;
+  color: #000000;
+  column-rule-style: dotted;
+  column-rule-color: #FF9900;
+  column-rule-width: 10px;
+  column-rule: 10px dotted #FF9900;
+}
+.test-section:hover {transform: perspective(490px) rotate3d(3330,0,10,10deg);}
 
-
-
+.h1 {
+-webkit-column-span: all; 
+column-span: all;
+background-color: #F6D5A1;
+color: #000000;
+}
 
 
 
